--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "2.0.0",
   "description": "",
   "homepage": "https://DmytroDatsiuk.github.io/goit-js-hw-11",
-
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
@@ -21,7 +20,8 @@
   "dependencies": {
     "axios": "^1.2.2",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.5"
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.11.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
